--- a/Product.html
+++ b/Product.html
@@ -6,7 +6,8 @@
 
 
 
-    <title>Features</title>
+    <title>Product</title>
+    <link rel = "icon" href = "image/favicon-32x32.png" type= "" >
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
