--- a/Contact.html
+++ b/Contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel = "icon" href = "image/favicon-32x32.png" type= "" >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Itim&family=Kanit:ital,wght@1,500&family=Noto+Sans+Thai:wght@300;700;900&display=swap" rel="stylesheet">
