--- a/Team.html
+++ b/Team.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team Member</title>
+    <link rel = "icon" href = "image/favicon-32x32.png" type= "" >
     <link rel="icon" type="image/x-icon" href="images/icon3.ico" width="35" height="35">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:ital,wght@0,400;0,700;1,400&display=swap">
