--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ชาบู ผ่อนได้</title>
+    <link rel = "icon" href = "image/favicon-32x32.png" type= "" >
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
