--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ชาบู ผ่อนได้</title>
+    <title>ชาบู ผ่อนได้ │ Home </title>
     <link rel = "icon" href = "image/favicon-32x32.png" type= "" >
 
     <!-- Fonts -->
