--- a/Features.html
+++ b/Features.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Features</title>
+    <title>ชาบู ผ่อนได้ │ Features</title>
     <link rel = "icon" href = "image/favicon-32x32.png" type= "" >
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
