--- a/Product.html
+++ b/Product.html
@@ -6,7 +6,7 @@
 
 
 
-    <title>Product</title>
+    <title>ชาบู ผ่อนได้ │ Product</title>
     <link rel = "icon" href = "image/favicon-32x32.png" type= "" >
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
