--- a/Contact.html
+++ b/Contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ชาบู ผ่อนได้ │ Contact</title>
-    <link rel = "icon" href = "image/favicon-32x32.png" type= "" >
+    <link href="image/Shabu.png" rel="shortcut icon" type="image/png"/>
+    <title>ชาบู ผ่อนได้ | Contact</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Itim&family=Kanit:ital,wght@1,500&family=Noto+Sans+Thai:wght@300;700;900&display=swap" rel="stylesheet">
@@ -40,10 +40,7 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Product.html">Product</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Features.html">Features</a>
+                <a class="nav-link" href="index.html">Features</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="Team.html">Team Members</a>
