--- a/Team.html
+++ b/Team.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ชาบู ผ่อนได้ │ Team Member</title>
-    <link rel = "icon" href = "image/favicon-32x32.png" type= "" >
+    <link href="image/Shabu.png" rel="shortcut icon" type="image/png"/>
+    <title>ชาบู ผ่อนได้ | Team Members</title>
     <link rel="icon" type="image/x-icon" href="images/icon3.ico" width="35" height="35">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:ital,wght@0,400;0,700;1,400&display=swap">
@@ -44,10 +44,7 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Product.html">Product</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Features.html">Features</a>
+                <a class="nav-link" href="index.html">Features</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="Team.html">Team Members</a>
