--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ชาบู ผ่อนได้ │ Home </title>
-    <link rel = "icon" href = "image/favicon-32x32.png" type= "" >
+    <link href="image/Shabu.png" rel="shortcut icon" type="image/png"/>
+    <title>ชาบู ผ่อนได้ | Home</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,6 +18,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
    
     <!-- CustomCss -->
+    <link rel="stylesheet" href="css/Feature.css">
     <link rel="stylesheet" href="css/NavbarStyle.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/preload.css">
@@ -33,7 +34,7 @@
     <div id="pageContent" class="content fadecontent">
 
     <!-- Navbar -->
-    <div id="mainNavigation">
+    <div id="mainNavigation" class="sticky">
         <nav role="navigation">
           <div class="py-3 text-center border-bottom">
             <a class ="nav-link" href ="#"><img src="image/Shabu.png" height="80" alt="" class="invert"></a>
@@ -51,10 +52,7 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Product.html">Product</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Features.html">Features</a>
+                <a class="nav-link" href="#about">Features</a>   
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="Team.html">Team Members</a>
@@ -70,7 +68,7 @@
       </div>
 
     <!-- Content -->
-    <div class="container">
+    <div class="container" id = "main">
         <div class="row">
             <div class="col-md-6 col-12 text-center">
                 <img class ="FirstIMG"src="image/ICON.png">
@@ -100,7 +98,115 @@
         </div>
     </div>
   </div>
+
+
+ <!-- feature -->
+ <section class="section" id="about">
+  <div class="container">
+      <div class="row">
+
+          <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+              <div class="features-item">
+                  <div class="features-icon">
+                      <img src="image/pd.png" alt="" width="100%">
+                      <h4><strong>Shabu Phon Dai</strong></h4>
+                      <p>ราคาสบายกระเป๋าสามารถผ่อนได้</p>
+                      <a href="#testimonials" class="main-button">
+                          More <i class="fa-solid fa-circle-chevron-down"></i>
+                      </a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+              <div class="features-item">
+                  <div class="features-icon">                          
+                      <img src="image/motorcycle_1.png" alt="" width="100%">
+                      <h4><strong>Delivery</strong></h4>
+                      <p>จัดส่งไวไม่ปล่อยให้รอคอยและรอนาน</p>
+                      <a href="#testimonials2" class="main-button">
+                          More <i class="fa-solid fa-circle-chevron-down"></i>
+                      </a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+              <div class="features-item">
+                  <div class="features-icon">                          
+                      <img src="image/box_1.png" alt="" width="100%">
+                      <h4><strong>Promotion</strong></h4>
+                      <p>มีโปรโมชั่นทุกเทศกาล</p>
+                      <a href="#testimonials3" class="main-button">
+                          More <i class="fa-solid fa-circle-chevron-down"></i>
+                      </a>
+                  </div>
+              </div>
+          </div>
+
+      </div>
+  </div>
+</section>
+          
+
+<!-- ***** detail1 ***** -->
+<section class="section" id="testimonials">
+  <div class="container">
+      <div class="row">
+
+          
+
+          <div class="col-lg-8 offset-lg-2">
+              <div class="center-heading">
+                  <h2 style="font-size: 3.5rem; color: aliceblue;">Shabu <em>Phon Dai</em></h2>
+                  <p>ทาง Shabu Phon Dai คัดกองวัตถุดิบเป็นอย่างดี ส่งเข้าสดใหม่ทุกวัน ไม่ใส่สารกันบูด
+                      และมีเมนูมากมาย สามารถทานได้ในหลายโอกาส เช่น ฉลองวันเกิด ทานพร้อมกันคนในครอบครัวในวันสำคัญต่างๆ
+                       Ood Ood~</p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+<!-- detail2 -->
+<section class="section" id="testimonials2">
+  <div class="container">
+      <div class="row">
+
+          <div class="col-lg-8 offset-lg-2">
+
+              <div class="center-heading">
+                  <h2 style="font-size: 3.5rem; color: aliceblue;">Delivery</h2>
+                      <p>Delivery ของทางร้านจะมี 2 ช่องทางในการให้สั่งซื้อ <br>ไม่ว่าจะเป็น Lineman หรือ Foodpanda ขอให้สั่งทานอย่างอร่อยนะ Ood Ood~</p>
+                    </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+<!-- detail3 -->
+<section class="section" id="testimonials3">
+  <div class="container">
+      <div class="row">
+
+          <div class="col-lg-8 offset-lg-2">
+
+              <div class="center-heading">
+                  <h2 style="font-size: 3.5rem; color: aliceblue;">Promotion for festival</h2>
+                  <p>ทางร้านของเราจะมีโปรโมชั่นสุดพิเศษสำหรับทุกเทศกาลต่างๆหรือวันสำคัญของลูกค้า ไม่ว่าจะเป็น
+                  วันเกิดของลูกค้าหรือเทศกาลที่ใกล้จะถึงวันฮาโลวีน คริสต์มาส ปีใหม่ Ood Ood~</p>
+              </div>
+
+          </div>
+
+      </div>
+  </div>
+</section>
 </div>
+
+
+
+
+
     <script src="script/main.js"></script>
     <script>$('.carousel').carousel();</script>
 <!-- Fonts -->
